--- a/src/pages/products.scss
+++ b/src/pages/products.scss
@@ -61,6 +61,9 @@ $sizes: (
                     height: 2.5em;
                     padding: 0
                 }
+                @media only screen and (max-width: map-get($map: $sizes, $key: tablet)) {
+                    display: block;
+                }
                 @media only screen and (max-width: map-get($map: $sizes, $key: mobile)) {
                     display: block;
                 }
